--- a/ОТЧЁТ.md
+++ b/ОТЧЁТ.md
@@ -1,3 +1,10 @@
 ## Отчёт по лабораторной работе №2
 Ход моих действий:
-1. 
+1. Создала файл с расширением .bash и уĸазала путь ĸ bash-интерпретатору, используя последовательность символов shebang
+2. Так как задание предполагало перевод чисел из десятичной в двоичную систему несколько раз, то удобнее всего было создать функцию, которая бы выполняла такую задачу. Для начала я объявила имя функции и открыла скобки (как и надо в конструкции задания функции).
+   ```bash
+    bin()
+   {
+   }
+   ```
+3. Затем я объявила переменную x - IP-адрес в десятичной записи, принимаемый на входе
