--- a/ОТЧЁТ.md
+++ b/ОТЧЁТ.md
@@ -7,4 +7,6 @@
    {
    }
    ```
-3. Затем я объявила переменную x - IP-адрес в десятичной записи, принимаемый на входе
+3. Затем я объявила переменные: 
+х: принимаемое на вход десятичное число
+pr: с помощью переменных ibase obase, указывающих основания входящей и выходящей переменной и команды bc (basic calculator), вызываем (echo) перевод числа из одной системы в другую и результат записываем в значение переменной
