--- a/ОТЧЁТ.md
+++ b/ОТЧЁТ.md
@@ -7,6 +7,51 @@
    {
    }
    ```
-3. Затем я объявила переменные: 
-х: принимаемое на вход десятичное число
+3. Затем я объявила следующие переменные:  
+х: принимаемое на вход десятичное число  
 pr: с помощью переменных ibase obase, указывающих основания входящей и выходящей переменной и команды bc (basic calculator), вызываем (echo) перевод числа из одной системы в другую и результат записываем в значение переменной
+   ```bash
+    x=$1
+    pr=$(echo "ibase=10;obase=2;$x" | bc)
+   ```
+4. Далее с помощью конструкции if else проверяем длину двоичного числа  
+Если оно равно 8, то просто как результат выводим его
+   ```bash
+    echo $pr
+   ```
+   Если нет, то используем printf (команда, которая позволяет вам писать в окно терминала Linux с более точным контролем и большим количеством параметров форматирования). Используем спецификатор %d (для печатания целых чисел), добавляем спецификатор ширины 8 и перед ним пишем 0, чтобы пробелы заполнялись нулями, а дальше записываем наш аргумент $pr
+   ```bash
+    echo $(printf "%08d" $pr)
+   ```
+   И получается такая функция перевода в двоичную систему в нужном формате
+   ```bash
+    bin ()
+    {
+    x=$1  
+    pr=$(echo "ibase=10;obase=2;$x" | bc)  
+    if [ $(expr length "$pr") -eq 8 ]  
+    then  
+      echo $pr  
+    else  
+      echo $(printf "%08d" $pr)  
+    fi  
+    }
+   ```
+5. Объявляем переменную ip - наш IP-адрес в десятичной системе и с помощью IFS (переменная, которая определяет разделитель полей во вводимой строке (Input Field Separator)), поменяв разделитель на точку, делим строку и создаем массив а, содержащий 4 байта адреса
+   ```bash
+    ip=$1  
+    IFS='.'  
+    a=($ip)
+   ```
+6. С помощью цикла проходимся по индексам массива и для каждого элемента, вызванного по индексу, мы печатаем значение функии для этого элемента и проверяем, если индекс элемента равен 3, то точку в конце не ставим, для остальных случаев - ставим и добавляем ключ -n, чтобы не выводить перевод строки
+   ```bash
+    for i in "${!a[@]}"; do
+    if [ $i -eq 3 ]
+    then 
+      echo $(bin "${a[$i]}")
+    else
+      echo -n $(bin "${a[$i]}").
+    fi
+    done
+   ```
+Проверим работу нашей программы 
